--- a/scss/style.css
+++ b/scss/style.css
@@ -23,19 +23,29 @@
   src: url("../font/KozGoPro-Regular.otf");
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
+  .top-nav_user {
+    display: none !important;
+  }
+}
+
+@media (max-width: 991px) {
+  .top-nav_button {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
   .top-nav_menu {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
     display: none;
   }
-  .top-nav_menu__active {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 0;
+  .top-nav_menu__adapt {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
   }
   .top-nav_menu li {
     line-height: 2;
@@ -43,6 +53,9 @@
   .top-nav_menu li a::after {
     display: none;
   }
+}
+
+@media (max-width: 768px) {
   .slick-next {
     display: none !important;
   }
@@ -379,93 +392,24 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 100%;
-}
-
-.top-nav_logo {
-  font-family: KozGoPro_Heavy;
-  color: #00aced;
-  font-size: 36px;
-  padding-left: 15px;
-  cursor: pointer;
-}
-
-.top-nav_menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.top-nav_items {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.top-nav_items__active {
-  color: #ff5000 !important;
-}
-
-.top-nav_items li {
-  margin-right: 39px;
-}
-
-.top-nav_items li a {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #373737;
-  font-family: KozGoPro_Heavy;
-  font-size: 18px;
-}
-
-.top-nav_items li a:hover {
-  color: #ff5000;
-}
-
-.top-nav_user {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-}
-
-.top-nav_user img {
-  width: 42px;
-  height: 42px;
-}
-
-.top-nav_user h3 {
-  font-family: KozGoPro_Bold;
-  font-size: 20px;
-  margin-left: 7px;
-  margin-right: 25px;
-}
-
-.top-nav_user h3:hover {
-  opacity: 0.5;
+  position: relative;
 }
 
 .top-nav_button {
+  display: none;
   width: 110px;
-  height: 90px;
+  height: 72px;
   background-color: #ff5000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  position: absolute;
+  right: 0;
+  top: -72px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
 .top-nav_button-circle {
@@ -492,6 +436,67 @@ body {
 
 .top-nav_button-circle i {
   color: white;
+}
+
+.top-nav_logo {
+  font-family: KozGoPro_Heavy;
+  color: #00aced;
+  font-size: 36px;
+  padding-left: 15px;
+  cursor: pointer;
+}
+
+.top-nav_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
+.top-nav_menu__active {
+  color: #ff5000 !important;
+}
+
+.top-nav_menu li {
+  margin-right: 25px;
+}
+
+.top-nav_menu li a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #373737;
+  font-family: KozGoPro_Heavy;
+  font-size: 18px;
+}
+
+.top-nav_menu li a:hover {
+  color: #ff5000;
+}
+
+.top-nav_user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.top-nav_user img {
+  width: 42px;
+  height: 42px;
+}
+
+.top-nav_user h3 {
+  font-family: KozGoPro_Bold;
+  font-size: 20px;
+  margin-left: 7px;
+}
+
+.top-nav_user h3:hover {
+  opacity: 0.5;
 }
 
 .slider {
@@ -1618,6 +1623,460 @@ body {
 
 .register-form p a {
   color: #00aced;
+}
+
+.services1 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #b1d518 !important;
+  border: 1px solid #b1d518;
+  margin-bottom: 100px;
+}
+
+.services1-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services1-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services1-item-img_block {
+  background-color: #b1d518;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services1-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #b1d518;
+}
+
+.services1-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services1-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services1-item-content-items_block {
+  background-color: #b1d518;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services1-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services2 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #ef3139 !important;
+  border: 1px solid #ef3139;
+  margin-bottom: 100px;
+}
+
+.services2-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services2-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services2-item-img_block {
+  background-color: #ef3139;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services2-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #ef3139;
+}
+
+.services2-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services2-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services2-item-content-items_block {
+  background-color: #ef3139;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services2-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services3 {
+  min-height: 600px;
+  padding: 35px;
+  border-bottom: 3px solid #02b59f !important;
+  border: 1px solid #02b59f;
+  margin-bottom: 100px;
+}
+
+.services3-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.services3-item img:first-child {
+  width: 100%;
+}
+
+.services3-item-img {
+  margin-top: -55px;
+  background-color: #02b59f;
+  padding: 20px 25px;
+  border-radius: 50%;
+  margin-bottom: 40px;
+}
+
+.services3-item h1 {
+  color: #02b59f;
+  font-family: KozGoPro_Bold;
+}
+
+.services3-item h3 {
+  font-family: KozGoPro_Bold;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.services3-item-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services3-item-content_block {
+  background-color: #02b59f;
+  padding: 5px 7px;
+  min-width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services3-item-content p {
+  font-family: KozGoPro_Regular;
+}
+
+.services4 {
+  min-height: 500px;
+  padding: 35px;
+  border-bottom: 3px solid #ff5000 !important;
+  border: 1px solid #ff5000;
+  margin-bottom: 100px;
+}
+
+.services4-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services4-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services4-item-img_block {
+  background-color: #ff5000;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services4-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #ff5000;
+}
+
+.services4-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services4-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services4-item-content-items_block {
+  background-color: #ff5000;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services4-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services5 {
+  min-height: 600px;
+  padding: 35px;
+  border-bottom: 3px solid #15202c !important;
+  border: 1px solid #15202c;
+  margin-bottom: 100px;
+}
+
+.services5-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.services5-item img:first-child {
+  width: 100%;
+}
+
+.services5-item-img {
+  margin-top: -55px;
+  background-color: #15202c;
+  padding: 20px 25px;
+  border-radius: 50%;
+  margin-bottom: 40px;
+}
+
+.services5-item h1 {
+  color: #15202c;
+  font-family: KozGoPro_Bold;
+}
+
+.services5-item h3 {
+  font-family: KozGoPro_Bold;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.services5-item-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services5-item-content_block {
+  background-color: #15202c;
+  padding: 5px 7px;
+  min-width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services5-item-content p {
+  font-family: KozGoPro_Regular;
+}
+
+.services6 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #ffa721 !important;
+  border: 1px solid #ffa721;
+  margin-bottom: 100px;
+}
+
+.services6-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services6-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services6-item-img_block {
+  background-color: #ffa721;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services6-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #ffa721;
+}
+
+.services6-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services6-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services6-item-content-items_block {
+  background-color: #ffa721;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services6-item-content-items p {
+  font-family: KozGoPro_Regular;
+}
+
+.services7 {
+  min-height: 580px;
+  padding: 35px;
+  border-bottom: 3px solid #02b59f !important;
+  border: 1px solid #02b59f;
+  margin-bottom: 100px;
+}
+
+.services7-item-img {
+  float: left;
+  margin-right: 70px;
+  position: relative;
+}
+
+.services7-item-img img {
+  max-height: 500px;
+  max-width: 358px;
+}
+
+.services7-item-img_block {
+  background-color: #02b59f;
+  padding: 20px 25px;
+  position: absolute;
+  right: -11%;
+  top: 25%;
+  border-radius: 50%;
+}
+
+.services7-item-content h1 {
+  font-family: KozGoPro_Bold;
+  color: #02b59f;
+}
+
+.services7-item-content h3 {
+  font-family: KozGoPro_Bold;
+  line-height: 1.231;
+  margin-bottom: 15px;
+}
+
+.services7-item-content p {
+  margin-bottom: 15px;
+}
+
+.services7-item-content-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.services7-item-content-items_block {
+  background-color: #02b59f;
+  padding: 5px 7px;
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+}
+
+.services7-item-content-items p {
+  font-family: KozGoPro_Regular;
 }
 
 .services1 {
