--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,12 +1,20 @@
-@media (max-width: 768px) {
-  // Top nav
+@media (max-width: 1100px) {
+  .top-nav_user {
+    display: none !important;
+  }
+}
+
+@media (max-width: 991px) {
+  //  Top nav
   .top-nav {
+    &_button {
+      display: flex !important;
+    }
     &_menu {
-      flex-direction: column;
+      flex-direction: column !important;
       display: none;
-      &__active {
-        display: flex;
-        margin-bottom: 0;
+      &__adapt {
+        display: flex !important;
       }
       & li {
         line-height: 2;
@@ -18,6 +26,9 @@
       }
     }
   }
+}
+
+@media (max-width: 768px) {
   // Slider
   .slick-next {
     display: none !important;
