--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -13,6 +13,9 @@
     &_menu {
       flex-direction: column !important;
       display: none;
+      border: 2px solid grey;
+      padding: 10px !important;
+      border-radius: 20px;
       &__adapt {
         display: flex !important;
       }
@@ -162,6 +165,82 @@
         }
       }
     }
+  }
+  // contact page
+  .contact-1 {
+    background-color: transparent !important;
+    flex-direction: column;
+    position: static !important;
+    height: auto !important;
+    margin-top: 0 !important;
+    margin-bottom: 50px !important;
+    &-content {
+      position: static !important;
+    }
+  }
+  .contact-2 {
+    h5 {
+      text-align: center;
+    }
+    &_block {
+      h3 {
+        text-align: center;
+      }
+    }
+  }
+  .contact-3 {
+    &_h1 {
+      text-align: center;
+    }
+    &_form-1_input, &_form-2_input, &_form-3_input {
+      flex-direction: column;
+      justify-content: center;
+      &-col {
+        width: 100% !important;
+        small {
+          text-align: center !important;
+        }
+      }
+      span {
+        margin-right: 0 !important;
+        text-align: center !important;
+      }
+      &-cols {
+        text-align: center !important;
+      }
+      &-70 {
+        width: 100% !important;
+        margin-bottom: 20px;
+      }
+      &-30 {
+        width: 50% !important;
+      }
+      &-50 {
+        width: 100% !important;
+        margin-bottom: 20px;
+      }
+      &-80 {
+        width: 100% !important;
+        margin-bottom: 20px;
+      }
+    }
+    .contact-3_form-2_input-start {
+      align-items: center;
+    }
+    .contact-3_form-2_input-start-check-row {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
+  }
+  .custom-checkbox + label {
+    margin-bottom: 15px;
+  }
+  .contact-3_form-2_input-textarea {
+    width: 100% !important;
+  }
+  .contact-3_form-3 h4 {
+    text-align: center;
   }
 }
 
