--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -196,7 +196,7 @@
       flex-direction: column;
       justify-content: center;
       &-col {
-        width: 100% !important;
+        width: 90% !important;
         small {
           text-align: center !important;
         }
@@ -207,20 +207,23 @@
       }
       &-cols {
         text-align: center !important;
+        margin-right: 0 !important;
       }
       &-70 {
-        width: 100% !important;
+        width: 90% !important;
         margin-bottom: 20px;
+        margin-right: 0 !important;
       }
       &-30 {
         width: 50% !important;
       }
       &-50 {
-        width: 100% !important;
+        width: 90% !important;
         margin-bottom: 20px;
+        margin-right: 0 !important;
       }
       &-80 {
-        width: 100% !important;
+        width: 90% !important;
         margin-bottom: 20px;
       }
     }
@@ -241,6 +244,12 @@
   }
   .contact-3_form-3 h4 {
     text-align: center;
+  }
+  .contact-2_block {
+    padding-left: 0 !important;
+  }
+  .contact-3_h1 {
+    padding-left: 0 !important;
   }
 }
 
