--- a/scss/style.css
+++ b/scss/style.css
@@ -3656,4 +3656,50 @@ input[type="file"] {
   top: 13px;
   cursor: pointer;
 }
+
+.pricing {
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 60px;
+}
+
+.pricing h1 {
+  color: #ef3139;
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.pricing-grids {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.pricing-grids-grid-1 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 0;
+      grid-template-areas: "name name name name" "name2 name2 name2 name2" "name name name tokio" "sydney sydney sydney sydney";
+}
+
+.pricing-grids-grid-1-name {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: name;
+}
+
+.pricing-grids-grid-1-name2 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: name2;
+}
 /*# sourceMappingURL=style.css.map */
